--- a/ui/package.json
+++ b/ui/package.json
@@ -4,8 +4,8 @@
   "private": true,
   "scripts": {
     "shim": "node build/fxupdate.js",
-    "serve": "SET NODE_ENV=development yarn run shim && vue-cli-service serve",
-    "build": "SET NODE_ENV=production yarn run shim && vue-cli-service build",
+    "serve": "NODE_ENV=development yarn run shim && vue-cli-service serve",
+    "build": "NODE_ENV=production yarn run shim && vue-cli-service build",
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
