--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -23,7 +23,7 @@ jobs:
         working-directory: ./ui
       - uses: vimtor/action-zip@v1
         with:
-          files: fxmanifest.lua license.md README.md version ui/dist client server
+          files: fxmanifest.lua license.md README.md locale.lua version ui/dist client server config img languages
           recursive: false
           dest: bcc-stables.zip
       - name: get-npm-version
