--- a/ui/package.json
+++ b/ui/package.json
@@ -1,11 +1,13 @@
 {
-  "name": "ui",
-  "version": "0.1.0",
+  "name": "bcc-stables",
+  "version": "1.1.0",
   "private": true,
   "scripts": {
     "shim": "node build/fxupdate.js",
     "serve": "NODE_ENV=development yarn run shim && vue-cli-service serve",
     "build": "NODE_ENV=production yarn run shim && vue-cli-service build",
+    "build:local": "NODE_ENV=local yarn run shim && vue-cli-service build",
+    "start": "vue-cli-service build",
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
